# 2023-ikt218-osdev

./: .gitignore  README.md  boot.s  build.sh  code.s  gdt.c  idt.c  idtr.s  insanePROSKILL.sh  isr.s  kernel.c  run.sh  terminal.c  test.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-image.yml  docker-publish.yaml  docker-publish.yml  parse_submissions.yaml
Asak/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  disk.sh
Asak/.cmake/api/v1/reply/: cache-v2-bf9463e53ffade0286cd.json  cmakeFiles-v1-7b38f63e62f7c4cf9d65.json  codemodel-v2-28735d4a2cf8aadc779d.json  index-2023-02-12T11-21-19-0112.json  target-uia-os-boot-Debug-48760e9f2abda92ae23c.json  target-uia-os-create-image-Debug-172189d66df293877188.json  target-uia-os-kernel-Debug-5ef16079e9a622a276df.json  target-uia-os-module-stdlib-Debug-c11d22f722835751fed1.json  toolchains-v1-b8d698fb80070bbddb5e.json
Asak/grub/: Makefile  cmake_install.cmake
Asak/src/apps/song/: CMakeLists.txt
Asak/src/apps/song/include/: frequencies.h
Asak/src/apps/song/src/: song.cpp
Asak/src/arch/i386/: linker.ld
Asak/src/boot/: CMakeLists.txt
Asak/src/boot/src/: boot.asm  boot.cpp
Asak/src/kernel/: CMakeLists.txt
Asak/src/kernel/cpu/: CMakeLists.txt  descriptor.h  gdt.cpp  gdtflush.asm  hardware_port.cpp  idt.c  idt.cpp  idtflush.asm
Asak/src/kernel/cpu/GDT/: gdt.cpp
Asak/src/kernel/cpu/IDT/: idt.cpp  idtflush.asm
Asak/src/kernel/cpu/ISR/: input.cpp  isr.asm  isr.cpp  isr.h
Asak/src/kernel/drivers/: CMakeLists.txt
Asak/src/kernel/drivers/keyboard/: keyboard.cpp
Asak/src/kernel/include/: hardware_port.h  mem.h  util.h
Asak/src/kernel/include/cpu/: descriptor.h  input.h  isr.h
Asak/src/kernel/include/kernel/: memory.h  pit.h
Asak/src/kernel/memory/: CMakeLists.txt  malloc.c  malloc.cpp  memutils.c  paging.c
Asak/src/kernel/src/: main.cpp  mem.cpp  pit.c  util.cpp
Asak/src/stdlib/: CMakeLists.txt
Asak/src/stdlib/include/: ports.h  screen.h  system.h
Asak/src/stdlib/src/: ports.cpp  screen.cpp  system.c
OSDev10/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  disk.sh
OSDev10/grub/: Makefile  cmake_install.cmake
build-group-24/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  disk.sh
build-group-24/grub/: Makefile  cmake_install.cmake
build_osdev_18/: kernel.elf
group-24/: CMakeLists.txt
group-24/grub/: disk.sh.in
group-24/src/stdlib/: CMakeLists.txt
group-24/src/stdlib/src/: string.c  system.c
group41/: CMakeLists.txt
group_1/: CMakeLists.txt
group_1/grub/: disk.sh.in  grub.cfg.in
group_14/: CMakeLists.txt
group_20/: CMakeLists.txt
group_23/: CMakeLists.txt
group_25/: CMakeLists.txt
group_27/: CMakeLists.txt
group_27/grub/: build_docker.sh  disk.sh.in
group_32/: CMakeLists.txt
group_32/grub/: Dockerfile
group_36/: CMakeLists.txt
group_36/config/: QEMURunner.sh.in  (+1 more)
group_36/src/kernel/: CMakeLists.txt  README.MD
group_36/src/kernel/cpu/: CMakeLists.txt
group_36/src/kernel/cpu/i386/: gdt.cpp  gdt.h  gdt_a.asm  hardware.cpp  hardware.h  hardware_port.cpp  hardware_port.h  idt.cpp  idt.h  idt_a.asm  isr.cpp  isr.h  isr_a.asm
group_36/src/kernel/cpu/i386/timer/: timer.cpp  timer.h
group_36/src/kernel/cpu/include/: cpu.h
group_36/src/kernel/drivers/: CMakeLists.txt
group_36/src/kernel/drivers/_include/: driver.h
group_36/src/kernel/drivers/keyboard/: CMakeLists.txt  keyboard.cpp  keyboard.h
group_36/src/kernel/drivers/monitor/: monitor.h  monitor_1.cpp  monitor_1.h
group_36/src/kernel/include/: gdt.h  pit.h  print.h  system.h
group_36/src/kernel/memory/: CMakeLists.txt  kmalloc.cpp  kmalloc.h  paging.cpp  paging.h
group_36/src/kernel/runtime/lua/: init.cpp
group_36/src/kernel/src/: gdt.cpp  gdt_flush.asm  main.cpp  print.cpp
group_36/src/stdlib/: CMakeLists.txt
group_36/src/stdlib/include/: system.h
group_36/src/stdlib/src/: system.c
group_36/src/stdlib/stdlib/c/: libc.cpp  libc.h
group_36/src/stdlib/stdlib/cpp/: bitset.cpp  bitset.h  exception.cpp  exception.h
group_39/: CMakeLists.txt
group_3Musketerer/: CMakeLists.txt
group_42/: CMakeLists.txt
group_50/: CMakeLists.txt
group_6/: CMakeLists.txt
group_60/: CMakeLists.txt
group_7/: CMakeLists.txt  README.md
group_DANgruppe19/: CMakeLists.txt
group_OSDev-11/: CMakeLists.txt
group_OSDev-15/: keyboard.c  pit.c
group_OSDev5/: CMakeLists.txt
group_OSDev_18/: build.zig  kernel.elf  linker.ld
group_OSDev_35/: CMakeLists.txt
group_espen_k/: CMakeLists.txt  README.md
group_haava/: CMakeLists.txt  README.md
group_hang/: CMakeLists.txt
group_helga/: CMakeLists.txt
group_jet/: CMakeLists.txt
group_max_ginte/: CMakeLists.txt
group_name/: CMakeLists.txt
group_name/grub/: CMakeLists.txt  disk.sh.in
group_name/src/arch/i386/: linker.ld
group_name/src/boot/: README.md:Zone.Identifier
group_name/src/kernel/: README.md:Zone.Identifier
group_name/src/kernel/cpu/: gdt.h
group_name/src/kernel/cpu/timer/: timer.cpp  timer.h
group_name/src/kernel/src/: main.cpp  main.cpp:Zone.Identifier
group_name/src/stdlib/src/: system.c
group_osdev_33/src/monitor/: CMakeLists.txt  monitor.h  monitor_2.h
group_per-arne/: CMakeLists.txt
group_simon/: CMakeLists.txt
group_siverteh/: CMakeLists.txt
group_siverteh/src/apps/song/: CMakeLists.txt
group_siverteh/src/apps/song/src/: song.cpp
group_takelur/: CMakeLists.txt
group_takelur/src/apps/song/: CMakeLists.txt
group_takelur/src/apps/song/include/song/: frequencies.h  song.h
group_takelur/src/apps/song/src/: song.cpp
group_thomas/: CMakeLists.txt
group_thomasne/: CMakeLists.txt
group_tuva/: CMakeLists.txt
group_tuva/src/apps/: CMakeLists.txt
group_tuva/src/apps/include/: song.h
group_tuva/src/apps/src/: song.cpp
group_voliboar/: CMakeLists.txt
include/: gdt.h  idt.h  isr.h  keyboard.h  system.h  terminal.h
osdev_18/: README.md  build.zig  flake.nix
osdev_33/: CMakeLists.txt
screen/: screen.c
whenMerging/: TodoWhenMerging.md  oldSettings.json
(+879 files in other folders)
