
set(OS_MODULE_IO_DISPLAY_VERSION "2")
set(OS_MODULE_IO_DISPLAY_NAME ${OS_KERNEL_NAME}-module-display)
set(OS_MODULE_IO_DISPLAY_SOURCES
        monitor_${OS_MODULE_IO_DISPLAY_VERSION}.cpp
)

add_library(${OS_MODULE_IO_DISPLAY_NAME} ${OS_MODULE_IO_DISPLAY_SOURCES})
#target_compile_options(${OS_MODULE_IO_DISPLAY_NAME} PUBLIC ${OS_MODULE_BOOT_COMPILE_OPTS})
target_link_libraries(${OS_MODULE_IO_DISPLAY_NAME} PUBLIC ${OS_LIBRARIES})
target_include_directories(${OS_MODULE_IO_DISPLAY_NAME}
        PUBLIC include
        PRIVATE .
)
target_compile_definitions(${OS_MODULE_IO_DISPLAY_NAME}
        PUBLIC
        OS_MODULE_IO_DISPLAY_VERSION=${OS_MODULE_IO_DISPLAY_VERSION}
)


set(OS_LIBRARIES ${OS_LIBRARIES} ${OS_MODULE_IO_DISPLAY_NAME} PARENT_SCOPE)